@@ -741,6 +741,8 @@ int main(int argc, char **argv)
 	if (geteuid() != 0)
 		printf(_("PowerTOP needs to be run as root to collect enough information\n"));
 	printf(_("Collecting data for %i seconds \n"), (int)ticktime);
+	printf("\n\n");
+	print_intel_cstates();
 	stop_timerstats();
 
 	while (1) {
